groovy and junit4 in same project